--- a/modelo.ipynb
+++ b/modelo.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install ucimlrepo"
+    "#pip install ucimlrepo\n",
+    "# pruebas Borrar despues"
    ]
   },
   {
