Se agregó la funcionalidad de guardar los modelos entrenados en un directorio especifico, en una subdierectorio con el nombre de la versión del modelo. Se adaptaron los pipelines de entrenamiento/guardado y el de cargdo de modelos.

--- a/modelo.ipynb
+++ b/modelo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -89,10 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "import pandas as pd\n",
@@ -504,59 +506,66 @@
     "\n",
     "    return best_xgb_model\n",
     "\n",
-    "def train_and_save_rf_model(X_train, Y_train, label):\n",
-    "     # Usar 'balanced' para manejar el desbalanceo de clases automáticamente\n",
+    "def train_and_save_rf_model(X_train, Y_train, label, dir):\n",
+    "    # Usar 'balanced' para manejar el desbalanceo de clases automáticamente\n",
     "    class_weight = 'balanced'\n",
     "\n",
     "    # Entrenar el Modelo Random Forest\n",
     "    RF_Model = RF_Train(X_train, Y_train, class_weight)  # Pasar class_weight\n",
     "\n",
-    "    # Guardar el modelo entrenado\n",
-    "    model_filename = f\"rf_model_{label}.pkl\"\n",
+    "    # Crear el directorio si no existe\n",
+    "    os.makedirs(dir, exist_ok=True)\n",
+    "\n",
+    "    # Guardar el modelo entrenado en el directorio especificado\n",
+    "    model_filename = os.path.join(dir, f\"rf_model_{label}.pkl\")\n",
     "    joblib.dump(RF_Model, model_filename)\n",
     "\n",
     "    print(f\"Modelo Random Forest guardado exitosamente como {model_filename}.\")\n",
     "    return RF_Model\n",
     "\n",
-    "def train_and_save_knn_model(X_train, Y_train, label):\n",
+    "def train_and_save_knn_model(X_train, Y_train, label, dir):\n",
     "    # Entrenar el Modelo KNN\n",
     "    KNN_Model = KNN_Train(X_train, Y_train)\n",
     "\n",
-    "    # Guardar el modelo entrenado\n",
-    "    model_filename = f\"knn_model_{label}.pkl\"\n",
+    "    # Crear el directorio si no existe\n",
+    "    os.makedirs(dir, exist_ok=True)\n",
+    "\n",
+    "    # Guardar el modelo entrenado en el directorio especificado\n",
+    "    model_filename = os.path.join(dir, f\"knn_model_{label}.pkl\")\n",
     "    joblib.dump(KNN_Model, model_filename)\n",
     "\n",
     "    print(f\"Modelo KNN guardado exitosamente como {model_filename}.\")\n",
     "    return KNN_Model\n",
     "\n",
-    "def train_and_save_svm_model(X_train, Y_train, label):\n",
-    "    \"\"\"\n",
-    "    Entrenar y guardar el modelo SVM.\n",
-    "    \"\"\"\n",
+    "def train_and_save_svm_model(X_train, Y_train, label, dir):\n",
+    "    # Entrenar el modelo SVM\n",
     "    SVM_Model = SVM_Train(X_train, Y_train)  # Llamar a la función de entrenamiento\n",
     "\n",
-    "    # Guardar el modelo entrenado\n",
-    "    model_filename = f\"svm_model_{label}.pkl\"\n",
+    "    # Crear el directorio si no existe\n",
+    "    os.makedirs(dir, exist_ok=True)\n",
+    "\n",
+    "    # Guardar el modelo entrenado en el directorio especificado\n",
+    "    model_filename = os.path.join(dir, f\"svm_model_{label}.pkl\")\n",
     "    joblib.dump(SVM_Model, model_filename)\n",
     "\n",
     "    print(f\"Modelo SVM guardado exitosamente como {model_filename}.\")\n",
     "    return SVM_Model\n",
     "\n",
-    "def train_and_save_xgb_model(X_train, Y_train, label):\n",
-    "    \"\"\"\n",
-    "    Entrenar y guardar el modelo XGBoost.\n",
-    "    \"\"\"\n",
+    "def train_and_save_xgb_model(X_train, Y_train, label, dir):\n",
+    "    # Entrenar el modelo XGBoost\n",
     "    XGB_Model = XGB_Train(X_train, Y_train)  # Llamar a la función de entrenamiento\n",
     "\n",
-    "    # Guardar el modelo entrenado\n",
-    "    model_filename = f\"xgb_model_{label}.pkl\"\n",
+    "    # Crear el directorio si no existe\n",
+    "    os.makedirs(dir, exist_ok=True)\n",
+    "\n",
+    "    # Guardar el modelo entrenado en el directorio especificado\n",
+    "    model_filename = os.path.join(dir, f\"xgb_model_{label}.pkl\")\n",
     "    joblib.dump(XGB_Model, model_filename)\n",
     "\n",
     "    print(f\"Modelo XGBoost guardado exitosamente como {model_filename}.\")\n",
     "    return XGB_Model\n",
     "\n",
-    "\n",
-    "def process_and_train_models(X, Y, label_encoder, version_label, cv=5):\n",
+    "def process_and_train_models(X, Y, label_encoder, version_label, dir, cv=5):\n",
     "    \"\"\"\n",
     "    Entrena los modelos KNN, Random Forest, SVM y XGBoost con validación cruzada (cross-validation),\n",
     "    evalúa su rendimiento, y selecciona el mejor modelo basándose en la precisión de la clase 'high risk'.\n",
@@ -575,18 +584,26 @@
     "    version_label : str\n",
     "        Versión del modelo para guardar los modelos y el encoder.\n",
     "        \n",
+    "    dir : str\n",
+    "        Directorio donde se guardarán los modelos y archivos.\n",
+    "        \n",
     "    cv : int, opcional\n",
     "        Número de folds para la validación cruzada (valor por defecto es 5).\n",
     "    \"\"\"\n",
     "\n",
-    "    # Train and save KNN, Random Forest, SVM, and XGBoost models\n",
-    "    KNN_Model = train_and_save_knn_model(X, Y, version_label)\n",
-    "    RF_Model = train_and_save_rf_model(X, Y, version_label)\n",
-    "    SVM_Model = train_and_save_svm_model(X, Y, version_label)\n",
-    "    XGB_Model = train_and_save_xgb_model(X, Y, version_label)\n",
+    "    model_dir = os.path.join(dir, version_label)\n",
     "\n",
-    "    # Save the label encoder\n",
-    "    encoder_filename = f\"label_encoder_{version_label}.pkl\"\n",
+    "    # Crear el directorio si no existe\n",
+    "    os.makedirs(model_dir, exist_ok=True)\n",
+    "\n",
+    "    # Train and save KNN, Random Forest, SVM, and XGBoost models in the specified directory\n",
+    "    KNN_Model = train_and_save_knn_model(X, Y, version_label, model_dir)\n",
+    "    RF_Model = train_and_save_rf_model(X, Y, version_label, model_dir)\n",
+    "    SVM_Model = train_and_save_svm_model(X, Y, version_label, model_dir)\n",
+    "    XGB_Model = train_and_save_xgb_model(X, Y, version_label, model_dir)\n",
+    "\n",
+    "    # Save the label encoder in the specified directory\n",
+    "    encoder_filename = os.path.join(model_dir, f\"label_encoder_{version_label}.pkl\")\n",
     "    joblib.dump(label_encoder, encoder_filename)\n",
     "    print(f\"LabelEncoder guardado como {encoder_filename}.\")\n",
     "\n",
@@ -630,8 +647,8 @@
     "    print(\"Reporte de clasificación del mejor modelo:\")\n",
     "    print(classification_report(Y, cross_val_predict(models[best_model_name], X, Y, cv=cv), target_names=label_encoder.classes_))\n",
     "\n",
-    "    # Save the best model comparison\n",
-    "    comparison_filename = f\"model_comparison_{version_label}.txt\"\n",
+    "    # Save the best model comparison in the specified directory\n",
+    "    comparison_filename = os.path.join(model_dir, f\"model_comparison_{version_label}.txt\")\n",
     "    with open(comparison_filename, \"w\") as file:\n",
     "        file.write(f\"Mejor modelo: {best_model_name} basado en la precisión para 'high risk'.\\n\")\n",
     "        file.write(f\"Precision: {model_performance[best_model_name]['precision']}\\n\")\n",
@@ -639,8 +656,7 @@
     "\n",
     "    print(f\"Información de comparación guardada como {comparison_filename}.\")\n",
     "\n",
-    "\n",
-    "def load_model(version_label, model_type=\"\"):\n",
+    "def load_model(version_label, model_type=\"\", dir=\"trainedModels/\"):\n",
     "    \"\"\"\n",
     "    Cargar el modelo entrenado basado en el version_label y el tipo de modelo especificado.\n",
     "    \n",
@@ -652,7 +668,10 @@
     "    model_type : str, opcional\n",
     "        El tipo de modelo a cargar: \"KNN\", \"Random Forest\", \"SVM\", \"XGBoost\".\n",
     "        Si está vacío, carga el mejor modelo basado en el archivo de comparación.\n",
-    "\n",
+    "    \n",
+    "    dir : str, opcional\n",
+    "        Directorio donde están guardados los modelos (valor por defecto es \"trainedModels/\").\n",
+    "    \n",
     "    Retorno:\n",
     "    --------\n",
     "    model : sklearn model\n",
@@ -661,13 +680,16 @@
     "    label_encoder : LabelEncoder\n",
     "        El label encoder asociado al modelo.\n",
     "    \"\"\"\n",
-    "    # Definir los nombres de los archivos de los modelos\n",
-    "    knn_model_filename = f\"knn_model_{version_label}.pkl\"\n",
-    "    rf_model_filename = f\"rf_model_{version_label}.pkl\"\n",
-    "    svm_model_filename = f\"svm_model_{version_label}.pkl\"\n",
-    "    xgb_model_filename = f\"xgb_model_{version_label}.pkl\"\n",
-    "    label_encoder_filename = f\"label_encoder_{version_label}.pkl\"\n",
-    "    comparison_filename = f\"model_comparison_{version_label}.txt\"\n",
+    "    # Ensure the path contains the correct separator\n",
+    "    model_dir = os.path.join(dir, version_label)\n",
+    "\n",
+    "    # Definir los nombres de los archivos de los modelos en el directorio\n",
+    "    knn_model_filename = os.path.join(model_dir, f\"knn_model_{version_label}.pkl\")\n",
+    "    rf_model_filename = os.path.join(model_dir, f\"rf_model_{version_label}.pkl\")\n",
+    "    svm_model_filename = os.path.join(model_dir, f\"svm_model_{version_label}.pkl\")\n",
+    "    xgb_model_filename = os.path.join(model_dir, f\"xgb_model_{version_label}.pkl\")\n",
+    "    label_encoder_filename = os.path.join(model_dir, f\"label_encoder_{version_label}.pkl\")\n",
+    "    comparison_filename = os.path.join(model_dir, f\"model_comparison_{version_label}.txt\")\n",
     "    \n",
     "    # Cargar el LabelEncoder\n",
     "    label_encoder = joblib.load(label_encoder_filename)\n",
@@ -740,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1082,9 +1104,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mk/z3kghqmj3sn4lf01gl1tzy5h0000gn/T/ipykernel_44814/1113898146.py:111: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '113.19822485207101' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/mk/z3kghqmj3sn4lf01gl1tzy5h0000gn/T/ipykernel_44814/3317251095.py:113: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '113.19822485207101' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  X_copy.loc[outliers[col], col] = X[col].mean()  # Replace with mean by default\n",
-      "/var/folders/mk/z3kghqmj3sn4lf01gl1tzy5h0000gn/T/ipykernel_44814/1113898146.py:111: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '76.46055226824457' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/mk/z3kghqmj3sn4lf01gl1tzy5h0000gn/T/ipykernel_44814/3317251095.py:113: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '76.46055226824457' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  X_copy.loc[outliers[col], col] = X[col].mean()  # Replace with mean by default\n"
      ]
     },
@@ -1343,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1362,9 +1384,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mk/z3kghqmj3sn4lf01gl1tzy5h0000gn/T/ipykernel_44814/3771474662.py:111: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '113.19822485207101' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/mk/z3kghqmj3sn4lf01gl1tzy5h0000gn/T/ipykernel_44814/2129549307.py:113: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '113.19822485207101' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  X_copy.loc[outliers[col], col] = X[col].mean()  # Replace with mean by default\n",
-      "/var/folders/mk/z3kghqmj3sn4lf01gl1tzy5h0000gn/T/ipykernel_44814/3771474662.py:111: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '76.46055226824457' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/mk/z3kghqmj3sn4lf01gl1tzy5h0000gn/T/ipykernel_44814/2129549307.py:113: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '76.46055226824457' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  X_copy.loc[outliers[col], col] = X[col].mean()  # Replace with mean by default\n"
      ]
     },
@@ -1372,11 +1394,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modelo KNN guardado exitosamente como knn_model_v0.1.pkl.\n",
-      "Modelo Random Forest guardado exitosamente como rf_model_v0.1.pkl.\n",
-      "Modelo SVM guardado exitosamente como svm_model_v0.1.pkl.\n",
-      "Modelo XGBoost guardado exitosamente como xgb_model_v0.1.pkl.\n",
-      "LabelEncoder guardado como label_encoder_v0.1.pkl.\n",
+      "Modelo KNN guardado exitosamente como trainedModels/v0.1/knn_model_v0.1.pkl.\n",
+      "Modelo Random Forest guardado exitosamente como trainedModels/v0.1/rf_model_v0.1.pkl.\n",
+      "Modelo SVM guardado exitosamente como trainedModels/v0.1/svm_model_v0.1.pkl.\n",
+      "Modelo XGBoost guardado exitosamente como trainedModels/v0.1/xgb_model_v0.1.pkl.\n",
+      "LabelEncoder guardado como trainedModels/v0.1/label_encoder_v0.1.pkl.\n",
       "Evaluando KNN con 5-fold cross-validation...\n",
       "Evaluando Random Forest con 5-fold cross-validation...\n",
       "Evaluando SVM con 5-fold cross-validation...\n",
@@ -1394,9 +1416,9 @@
       "   macro avg       0.80      0.80      0.80       811\n",
       "weighted avg       0.80      0.80      0.80       811\n",
       "\n",
-      "Información de comparación guardada como model_comparison_v0.1.txt.\n",
+      "Información de comparación guardada como trainedModels/v0.1/model_comparison_v0.1.txt.\n",
       "El mejor modelo es: KNN\n",
-      "Modelo KNN cargado desde knn_model_v0.1.pkl.\n",
+      "Modelo KNN cargado desde trainedModels/v0.1/knn_model_v0.1.pkl.\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "   high risk       0.85      0.83      0.84        47\n",
@@ -1415,6 +1437,9 @@
     "# Label for versioning\n",
     "version_label = \"v0.1\"\n",
     "\n",
+    "# Create the directory path for saving models\n",
+    "model_save_dir = \"trainedModels/\"\n",
+    "\n",
     "# Assuming you already have preprocessed data\n",
     "# Obtener los datos\n",
     "X, Y = GetDataset(Log=False)\n",
@@ -1428,11 +1453,11 @@
     "# Train Test Split\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Now call the function and pass the train/test data\n",
-    "process_and_train_models(X_train, Y_train, label_encoder, version_label)\n",
+    "# Now call the function and pass the train/test data, along with the save directory\n",
+    "process_and_train_models(X_train, Y_train, label_encoder, version_label, model_save_dir)\n",
     "\n",
-    "# Load the model and label encoder\n",
-    "model, label_encoder = load_model(version_label, model_type=\"\")\n",
+    "# Load the model and label encoder from the saved directory\n",
+    "model, label_encoder = load_model(version_label, model_type=\"\", dir=model_save_dir)\n",
     "\n",
     "# Test the model and generate the classification report\n",
     "report = test_and_evaluate_model(model, label_encoder, X_test, Y_test)\n",
@@ -1450,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1483,7 @@
      "output_type": "stream",
      "text": [
       "El mejor modelo es: KNN\n",
-      "Modelo KNN cargado desde knn_model_v0.1.pkl.\n",
+      "Modelo KNN cargado desde trainedModels/v0.1/knn_model_v0.1.pkl.\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "   high risk       0.85      0.83      0.84        47\n",
@@ -1474,16 +1499,18 @@
     }
    ],
    "source": [
+    "# Define the version label and the directory where the models are stored\n",
     "version_label = \"v0.1\"\n",
+    "model_save_dir = \"trainedModels/\"\n",
     "\n",
-    "# Load the model and label encoder\n",
-    "model, label_encoder = load_model(version_label, model_type=\"\")\n",
+    "# Load the model and label encoder from the specified directory\n",
+    "model, label_encoder = load_model(version_label, model_type=\"\", dir=model_save_dir)\n",
     "\n",
+    "# Assuming X_test and Y_test are already defined in your pipeline\n",
     "# Test the model and generate the classification report\n",
     "report = test_and_evaluate_model(model, label_encoder, X_test, Y_test)\n",
     "\n",
     "# Mostrar los mejores parámetros y el reporte de clasificación\n",
-    "\n",
     "print(\"Mejores parámetros encontrados:\", model)"
    ]
   }
